isEqualNode implementation