@@ -87,7 +87,7 @@ public class Element extends Node {
      */
     @Override
     public List<Node> getChildNodes() {
-        return childNodes == null ? Collections.emptyList() : Collections.unmodifiableList(childNodes);
+        return childNodes == null ? List.of() : Collections.unmodifiableList(childNodes);
     }
 
     @Override
@@ -342,6 +342,33 @@ public class Element extends Node {
         }
         return clone;
 	}
+
+    @Override
+    public boolean isEqualNode(Node other) {
+        if (this == other) {
+            return true;
+        }
+        if (other instanceof Element) {
+            Element otherElement = (Element) other;
+            var count = getChildCount();
+            var equalityCheck = Objects.equals(getNodeName(), otherElement.getNodeName()) &&
+                    Objects.equals(getNamespaceURI(), otherElement.getNamespaceURI()) &&
+                    Objects.equals(count, otherElement.getChildCount()) &&
+                    Objects.equals(getAttributes(), otherElement.getAttributes());
+
+            if (!equalityCheck) {
+                return false;
+            }
+
+            for (var i = 0; i < count; i++) {
+                if (!Node.nodesEquals(childNodes.get(i), otherElement.childNodes.get(i))) {
+                    return false;
+                }
+            }
+            return true;
+        }
+        return false;
+    }
 
     /**
      * Get the html content of the child of this node.
