@@ -22,7 +22,7 @@ import java.util.*;
  */
 public abstract class Node {
 
-    private static final List<Node> EMPTY_LIST = Collections.emptyList();
+    private static final List<Node> EMPTY_LIST = List.of();
 
     Node parentNode;
 
@@ -547,6 +547,30 @@ public abstract class Node {
      */
     public abstract Node cloneNode(boolean deep);
 
+    /**
+     * Check if the node is equal to the parameter.
+     *
+     * See <a href="https://dom.spec.whatwg.org/#concept-node-equals">...</a>
+     *
+     * @param other
+     * @return
+     */
+    public abstract boolean isEqualNode(Node other);
+
+    /**
+     * Null safe static isEqualNode helper
+     *
+     * @param a
+     * @param b
+     * @return
+     */
+    static boolean nodesEquals(Node a, Node b) {
+        if (a != null && b != null) {
+            return a.isEqualNode(b);
+        } else {
+            return a == null && b == null;
+        }
+    }
 
 	private void replaceTextNodeWith(Node text, StringBuilder concatenatedText) {
 		if(concatenatedText.length() == 0) {
